--- a/reactjs-basics-cfrend/package.json
+++ b/reactjs-basics-cfrend/package.json
@@ -15,7 +15,8 @@
   "license": "MIT",
   "dependencies": {
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "reactjs": "^1.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
@@ -25,5 +26,13 @@
     "babel-preset-stage-2": "^6.24.1",
     "webpack": "^1.15.0",
     "webpack-dev-server": "^1.16.5"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cfrend/reactTesting.git"
+  },
+  "bugs": {
+    "url": "https://github.com/cfrend/reactTesting/issues"
+  },
+  "homepage": "https://github.com/cfrend/reactTesting#readme"
 }
