--- a/reactjs-basics-cfrend/package.json
+++ b/reactjs-basics-cfrend/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router": "^2.8.1"
+    "react-router": "^2.8.1",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
