--- a/reactjs-basics-cfrend/package.json
+++ b/reactjs-basics-cfrend/package.json
@@ -17,7 +17,8 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router": "^2.8.1",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-logger": "^2.10.2"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
