--- a/reactjs-basics-cfrend/package.json
+++ b/reactjs-basics-cfrend/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^4.4.8",
     "react-router": "^2.8.1",
     "redux": "^3.7.2",
     "redux-logger": "^2.10.2"
