--- a/reactjs-basics-cfrend/package.json
+++ b/reactjs-basics-cfrend/package.json
@@ -19,7 +19,9 @@
     "react-redux": "^4.4.8",
     "react-router": "^2.8.1",
     "redux": "^3.7.2",
-    "redux-logger": "^2.10.2"
+    "redux-logger": "^2.10.2",
+    "redux-promise-middleware": "^4.3.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
